compiled the program

--- a/GRUP48/Makefile
+++ b/GRUP48/Makefile
@@ -16,4 +16,22 @@ freertos_sim: src/main.c src/scheduler.c src/tasks.c src/FreeRTOSConfig.h \
 	-I./src \
 	-I./FreeRTOS/include \
 	-I./FreeRTOS/portable/ThirdParty/GCC/Posix \
-	-I.
+	-I./FreeRTOS/portable/ThirdParty/GCC/Posix/utils \
+	src/main.c \
+	src/scheduler.c \
+	src/tasks.c \
+	FreeRTOS/source/tasks.c \
+	FreeRTOS/source/list.c \
+	FreeRTOS/source/queue.c \
+	FreeRTOS/source/timers.c \
+	FreeRTOS/source/event_groups.c \
+	FreeRTOS/source/stream_buffer.c \
+	FreeRTOS/portable/ThirdParty/GCC/Posix/port.c \
+	FreeRTOS/portable/ThirdParty/GCC/Posix/utils/wait_for_event.c \
+	FreeRTOS/portable/MemMang/heap_3.c \
+	-o freertos_sim \
+	-pthread
+
+# Temizleme komutu
+clean:
+	rm -f freertos_sim
