--- a/GRUP48/freertos_sim.dSYM/Contents/Resources/Relocations/aarch64/freertos_sim.yml
+++ b/GRUP48/freertos_sim.dSYM/Contents/Resources/Relocations/aarch64/freertos_sim.yml
@@ -7,25 +7,25 @@ relocations:
   - { offsetInCU: 0x5A, offset: 0x5A, size: 0x8, addend: 0x0, symName: _vApplicationIdleHook, symObjAddr: 0x4C, symBinAddr: 0x10000215C, symSize: 0x4 }
   - { offsetInCU: 0x6F, offset: 0x6F, size: 0x8, addend: 0x0, symName: _vApplicationTickHook, symObjAddr: 0x50, symBinAddr: 0x100002160, symSize: 0x4 }
   - { offsetInCU: 0x26, offset: 0xB1, size: 0x8, addend: 0x0, symName: _xTaskCreate, symObjAddr: 0x0, symBinAddr: 0x100002164, symSize: 0x88 }
-  - { offsetInCU: 0x40, offset: 0xCB, size: 0x8, addend: 0x0, symName: _pxCurrentTCB, symObjAddr: 0x9608, symBinAddr: 0x100010020, symSize: 0x0 }
-  - { offsetInCU: 0x27A, offset: 0x305, size: 0x8, addend: 0x0, symName: _pxReadyTasksLists, symObjAddr: 0x9680, symBinAddr: 0x1000101D8, symSize: 0x0 }
-  - { offsetInCU: 0x2A7, offset: 0x332, size: 0x8, addend: 0x0, symName: _pxDelayedTaskList, symObjAddr: 0x9610, symBinAddr: 0x100010168, symSize: 0x0 }
-  - { offsetInCU: 0x2C7, offset: 0x352, size: 0x8, addend: 0x0, symName: _pxOverflowDelayedTaskList, symObjAddr: 0x9618, symBinAddr: 0x100010170, symSize: 0x0 }
-  - { offsetInCU: 0x2DD, offset: 0x368, size: 0x8, addend: 0x0, symName: _xPendingReadyList, symObjAddr: 0x9620, symBinAddr: 0x100010178, symSize: 0x0 }
-  - { offsetInCU: 0x2F3, offset: 0x37E, size: 0x8, addend: 0x0, symName: _xIdleTaskHandles, symObjAddr: 0x9660, symBinAddr: 0x1000101B8, symSize: 0x0 }
-  - { offsetInCU: 0x325, offset: 0x3B0, size: 0x8, addend: 0x0, symName: _xDelayedTaskList1, symObjAddr: 0x9768, symBinAddr: 0x1000102C0, symSize: 0x0 }
-  - { offsetInCU: 0x33B, offset: 0x3C6, size: 0x8, addend: 0x0, symName: _xDelayedTaskList2, symObjAddr: 0x9790, symBinAddr: 0x1000102E8, symSize: 0x0 }
-  - { offsetInCU: 0x351, offset: 0x3DC, size: 0x8, addend: 0x0, symName: _xNextTaskUnblockTime, symObjAddr: 0x9648, symBinAddr: 0x1000101A0, symSize: 0x0 }
-  - { offsetInCU: 0x36C, offset: 0x3F7, size: 0x8, addend: 0x0, symName: _xSchedulerRunning, symObjAddr: 0x9650, symBinAddr: 0x1000101A8, symSize: 0x0 }
-  - { offsetInCU: 0x399, offset: 0x424, size: 0x8, addend: 0x0, symName: _xTickCount, symObjAddr: 0x9658, symBinAddr: 0x1000101B0, symSize: 0x0 }
+  - { offsetInCU: 0x40, offset: 0xCB, size: 0x8, addend: 0x0, symName: _pxCurrentTCB, symObjAddr: 0x9618, symBinAddr: 0x100010020, symSize: 0x0 }
+  - { offsetInCU: 0x27A, offset: 0x305, size: 0x8, addend: 0x0, symName: _pxReadyTasksLists, symObjAddr: 0x9690, symBinAddr: 0x1000101D8, symSize: 0x0 }
+  - { offsetInCU: 0x2A7, offset: 0x332, size: 0x8, addend: 0x0, symName: _pxDelayedTaskList, symObjAddr: 0x9620, symBinAddr: 0x100010168, symSize: 0x0 }
+  - { offsetInCU: 0x2C7, offset: 0x352, size: 0x8, addend: 0x0, symName: _pxOverflowDelayedTaskList, symObjAddr: 0x9628, symBinAddr: 0x100010170, symSize: 0x0 }
+  - { offsetInCU: 0x2DD, offset: 0x368, size: 0x8, addend: 0x0, symName: _xPendingReadyList, symObjAddr: 0x9630, symBinAddr: 0x100010178, symSize: 0x0 }
+  - { offsetInCU: 0x2F3, offset: 0x37E, size: 0x8, addend: 0x0, symName: _xIdleTaskHandles, symObjAddr: 0x9670, symBinAddr: 0x1000101B8, symSize: 0x0 }
+  - { offsetInCU: 0x325, offset: 0x3B0, size: 0x8, addend: 0x0, symName: _xDelayedTaskList1, symObjAddr: 0x9778, symBinAddr: 0x1000102C0, symSize: 0x0 }
+  - { offsetInCU: 0x33B, offset: 0x3C6, size: 0x8, addend: 0x0, symName: _xDelayedTaskList2, symObjAddr: 0x97A0, symBinAddr: 0x1000102E8, symSize: 0x0 }
+  - { offsetInCU: 0x351, offset: 0x3DC, size: 0x8, addend: 0x0, symName: _xNextTaskUnblockTime, symObjAddr: 0x9658, symBinAddr: 0x1000101A0, symSize: 0x0 }
+  - { offsetInCU: 0x36C, offset: 0x3F7, size: 0x8, addend: 0x0, symName: _xSchedulerRunning, symObjAddr: 0x9660, symBinAddr: 0x1000101A8, symSize: 0x0 }
+  - { offsetInCU: 0x399, offset: 0x424, size: 0x8, addend: 0x0, symName: _xTickCount, symObjAddr: 0x9668, symBinAddr: 0x1000101B0, symSize: 0x0 }
   - { offsetInCU: 0x3AF, offset: 0x43A, size: 0x8, addend: 0x0, symName: _uxTopUsedPriority, symObjAddr: 0x3BF8, symBinAddr: 0x10000BE48, symSize: 0x0 }
-  - { offsetInCU: 0x3CF, offset: 0x45A, size: 0x8, addend: 0x0, symName: _uxSchedulerSuspended, symObjAddr: 0x9668, symBinAddr: 0x1000101C0, symSize: 0x0 }
-  - { offsetInCU: 0x3E5, offset: 0x470, size: 0x8, addend: 0x0, symName: _uxCurrentNumberOfTasks, symObjAddr: 0x9670, symBinAddr: 0x1000101C8, symSize: 0x0 }
-  - { offsetInCU: 0x3FB, offset: 0x486, size: 0x8, addend: 0x0, symName: _uxTopReadyPriority, symObjAddr: 0x9678, symBinAddr: 0x1000101D0, symSize: 0x0 }
-  - { offsetInCU: 0x411, offset: 0x49C, size: 0x8, addend: 0x0, symName: _xYieldPendings, symObjAddr: 0x9748, symBinAddr: 0x1000102A0, symSize: 0x0 }
-  - { offsetInCU: 0x433, offset: 0x4BE, size: 0x8, addend: 0x0, symName: _xPendedTicks, symObjAddr: 0x9750, symBinAddr: 0x1000102A8, symSize: 0x0 }
-  - { offsetInCU: 0x449, offset: 0x4D4, size: 0x8, addend: 0x0, symName: _xNumOfOverflows, symObjAddr: 0x9758, symBinAddr: 0x1000102B0, symSize: 0x0 }
-  - { offsetInCU: 0x45F, offset: 0x4EA, size: 0x8, addend: 0x0, symName: _uxTaskNumber, symObjAddr: 0x9760, symBinAddr: 0x1000102B8, symSize: 0x0 }
+  - { offsetInCU: 0x3CF, offset: 0x45A, size: 0x8, addend: 0x0, symName: _uxSchedulerSuspended, symObjAddr: 0x9678, symBinAddr: 0x1000101C0, symSize: 0x0 }
+  - { offsetInCU: 0x3E5, offset: 0x470, size: 0x8, addend: 0x0, symName: _uxCurrentNumberOfTasks, symObjAddr: 0x9680, symBinAddr: 0x1000101C8, symSize: 0x0 }
+  - { offsetInCU: 0x3FB, offset: 0x486, size: 0x8, addend: 0x0, symName: _uxTopReadyPriority, symObjAddr: 0x9688, symBinAddr: 0x1000101D0, symSize: 0x0 }
+  - { offsetInCU: 0x411, offset: 0x49C, size: 0x8, addend: 0x0, symName: _xYieldPendings, symObjAddr: 0x9758, symBinAddr: 0x1000102A0, symSize: 0x0 }
+  - { offsetInCU: 0x433, offset: 0x4BE, size: 0x8, addend: 0x0, symName: _xPendedTicks, symObjAddr: 0x9760, symBinAddr: 0x1000102A8, symSize: 0x0 }
+  - { offsetInCU: 0x449, offset: 0x4D4, size: 0x8, addend: 0x0, symName: _xNumOfOverflows, symObjAddr: 0x9768, symBinAddr: 0x1000102B0, symSize: 0x0 }
+  - { offsetInCU: 0x45F, offset: 0x4EA, size: 0x8, addend: 0x0, symName: _uxTaskNumber, symObjAddr: 0x9770, symBinAddr: 0x1000102B8, symSize: 0x0 }
   - { offsetInCU: 0x4DE, offset: 0x569, size: 0x8, addend: 0x0, symName: _xTaskCreate, symObjAddr: 0x0, symBinAddr: 0x100002164, symSize: 0x88 }
   - { offsetInCU: 0x571, offset: 0x5FC, size: 0x8, addend: 0x0, symName: _prvCreateTask, symObjAddr: 0x88, symBinAddr: 0x1000021EC, symSize: 0xF0 }
   - { offsetInCU: 0x612, offset: 0x69D, size: 0x8, addend: 0x0, symName: _prvAddNewTaskToReadyList, symObjAddr: 0x178, symBinAddr: 0x1000022DC, symSize: 0x244 }
@@ -131,14 +131,14 @@ relocations:
   - { offsetInCU: 0x11C7, offset: 0x2E48, size: 0x8, addend: 0x0, symName: _xQueueSelectFromSet, symObjAddr: 0x22EC, symBinAddr: 0x1000082AC, symSize: 0x38 }
   - { offsetInCU: 0x120F, offset: 0x2E90, size: 0x8, addend: 0x0, symName: _xQueueSelectFromSetFromISR, symObjAddr: 0x2324, symBinAddr: 0x1000082E4, symSize: 0x34 }
   - { offsetInCU: 0x26, offset: 0x2F82, size: 0x8, addend: 0x0, symName: _xTimerCreateTimerTask, symObjAddr: 0x0, symBinAddr: 0x100008318, symSize: 0x70 }
-  - { offsetInCU: 0x4D, offset: 0x2FA9, size: 0x8, addend: 0x0, symName: _xTimerQueue, symObjAddr: 0x3618, symBinAddr: 0x100010310, symSize: 0x0 }
-  - { offsetInCU: 0x77, offset: 0x2FD3, size: 0x8, addend: 0x0, symName: _xTimerTaskHandle, symObjAddr: 0x3620, symBinAddr: 0x100010318, symSize: 0x0 }
-  - { offsetInCU: 0xA1, offset: 0x2FFD, size: 0x8, addend: 0x0, symName: _pxCurrentTimerList, symObjAddr: 0x3628, symBinAddr: 0x100010320, symSize: 0x0 }
+  - { offsetInCU: 0x4D, offset: 0x2FA9, size: 0x8, addend: 0x0, symName: _xTimerQueue, symObjAddr: 0x3628, symBinAddr: 0x100010310, symSize: 0x0 }
+  - { offsetInCU: 0x77, offset: 0x2FD3, size: 0x8, addend: 0x0, symName: _xTimerTaskHandle, symObjAddr: 0x3630, symBinAddr: 0x100010318, symSize: 0x0 }
+  - { offsetInCU: 0xA1, offset: 0x2FFD, size: 0x8, addend: 0x0, symName: _pxCurrentTimerList, symObjAddr: 0x3638, symBinAddr: 0x100010320, symSize: 0x0 }
   - { offsetInCU: 0x19C, offset: 0x30F8, size: 0x8, addend: 0x0, symName: _prvSampleTimeNow, symObjAddr: 0xA98, symBinAddr: 0x100008DB0, symSize: 0x70 }
-  - { offsetInCU: 0x1C3, offset: 0x311F, size: 0x8, addend: 0x0, symName: _prvSampleTimeNow.xLastTime, symObjAddr: 0x3638, symBinAddr: 0x100010330, symSize: 0x0 }
-  - { offsetInCU: 0x1F7, offset: 0x3153, size: 0x8, addend: 0x0, symName: _pxOverflowTimerList, symObjAddr: 0x3630, symBinAddr: 0x100010328, symSize: 0x0 }
-  - { offsetInCU: 0x20C, offset: 0x3168, size: 0x8, addend: 0x0, symName: _xActiveTimerList1, symObjAddr: 0x3640, symBinAddr: 0x100010338, symSize: 0x0 }
-  - { offsetInCU: 0x221, offset: 0x317D, size: 0x8, addend: 0x0, symName: _xActiveTimerList2, symObjAddr: 0x3668, symBinAddr: 0x100010360, symSize: 0x0 }
+  - { offsetInCU: 0x1C3, offset: 0x311F, size: 0x8, addend: 0x0, symName: _prvSampleTimeNow.xLastTime, symObjAddr: 0x3648, symBinAddr: 0x100010330, symSize: 0x0 }
+  - { offsetInCU: 0x1F7, offset: 0x3153, size: 0x8, addend: 0x0, symName: _pxOverflowTimerList, symObjAddr: 0x3640, symBinAddr: 0x100010328, symSize: 0x0 }
+  - { offsetInCU: 0x20C, offset: 0x3168, size: 0x8, addend: 0x0, symName: _xActiveTimerList1, symObjAddr: 0x3650, symBinAddr: 0x100010338, symSize: 0x0 }
+  - { offsetInCU: 0x221, offset: 0x317D, size: 0x8, addend: 0x0, symName: _xActiveTimerList2, symObjAddr: 0x3678, symBinAddr: 0x100010360, symSize: 0x0 }
   - { offsetInCU: 0x2FE, offset: 0x325A, size: 0x8, addend: 0x0, symName: _xTimerCreateTimerTask, symObjAddr: 0x0, symBinAddr: 0x100008318, symSize: 0x70 }
   - { offsetInCU: 0x326, offset: 0x3282, size: 0x8, addend: 0x0, symName: _prvCheckForValidListAndQueue, symObjAddr: 0x70, symBinAddr: 0x100008388, symSize: 0xC0 }
   - { offsetInCU: 0x33C, offset: 0x3298, size: 0x8, addend: 0x0, symName: _prvTimerTask, symObjAddr: 0x130, symBinAddr: 0x100008448, symSize: 0x34 }
@@ -208,17 +208,17 @@ relocations:
   - { offsetInCU: 0xBA5, offset: 0x4C49, size: 0x8, addend: 0x0, symName: _ucStreamBufferGetStreamBufferType, symObjAddr: 0x1294, symBinAddr: 0x10000ABDC, symSize: 0x20 }
   - { offsetInCU: 0xBCF, offset: 0x4C73, size: 0x8, addend: 0x0, symName: _prvWriteBytesToBuffer, symObjAddr: 0x12B4, symBinAddr: 0x10000ABFC, symSize: 0x12C }
   - { offsetInCU: 0x26, offset: 0x4D6F, size: 0x8, addend: 0x0, symName: _pxPortInitialiseStack, symObjAddr: 0x0, symBinAddr: 0x10000AD28, symSize: 0x134 }
-  - { offsetInCU: 0x4D, offset: 0x4D96, size: 0x8, addend: 0x0, symName: _xAllSignals, symObjAddr: 0x3D80, symBinAddr: 0x1000103B0, symSize: 0x0 }
-  - { offsetInCU: 0x8A, offset: 0x4DD3, size: 0x8, addend: 0x0, symName: _xSchedulerOriginalSignalMask, symObjAddr: 0x3D68, symBinAddr: 0x100010398, symSize: 0x0 }
-  - { offsetInCU: 0x9F, offset: 0x4DE8, size: 0x8, addend: 0x0, symName: _uxCriticalNesting, symObjAddr: 0x3D78, symBinAddr: 0x1000103A8, symSize: 0x0 }
-  - { offsetInCU: 0xCB, offset: 0x4E14, size: 0x8, addend: 0x0, symName: _hTimerTickThread, symObjAddr: 0x3D70, symBinAddr: 0x1000103A0, symSize: 0x0 }
-  - { offsetInCU: 0x175, offset: 0x4EBE, size: 0x8, addend: 0x0, symName: _xTimerTickThreadShouldRun, symObjAddr: 0x3D6C, symBinAddr: 0x10001039C, symSize: 0x0 }
+  - { offsetInCU: 0x4D, offset: 0x4D96, size: 0x8, addend: 0x0, symName: _xAllSignals, symObjAddr: 0x3D90, symBinAddr: 0x1000103B0, symSize: 0x0 }
+  - { offsetInCU: 0x8A, offset: 0x4DD3, size: 0x8, addend: 0x0, symName: _xSchedulerOriginalSignalMask, symObjAddr: 0x3D78, symBinAddr: 0x100010398, symSize: 0x0 }
+  - { offsetInCU: 0x9F, offset: 0x4DE8, size: 0x8, addend: 0x0, symName: _uxCriticalNesting, symObjAddr: 0x3D88, symBinAddr: 0x1000103A8, symSize: 0x0 }
+  - { offsetInCU: 0xCB, offset: 0x4E14, size: 0x8, addend: 0x0, symName: _hTimerTickThread, symObjAddr: 0x3D80, symBinAddr: 0x1000103A0, symSize: 0x0 }
+  - { offsetInCU: 0x175, offset: 0x4EBE, size: 0x8, addend: 0x0, symName: _xTimerTickThreadShouldRun, symObjAddr: 0x3D7C, symBinAddr: 0x10001039C, symSize: 0x0 }
   - { offsetInCU: 0x191, offset: 0x4EDA, size: 0x8, addend: 0x0, symName: _hSigSetupThread, symObjAddr: 0xB18, symBinAddr: 0x100010000, symSize: 0x0 }
-  - { offsetInCU: 0x1E9, offset: 0x4F32, size: 0x8, addend: 0x0, symName: _hMainThread, symObjAddr: 0x3D58, symBinAddr: 0x100010388, symSize: 0x0 }
-  - { offsetInCU: 0x1FE, offset: 0x4F47, size: 0x8, addend: 0x0, symName: _xSchedulerEnd, symObjAddr: 0x3D60, symBinAddr: 0x100010390, symSize: 0x0 }
+  - { offsetInCU: 0x1E9, offset: 0x4F32, size: 0x8, addend: 0x0, symName: _hMainThread, symObjAddr: 0x3D68, symBinAddr: 0x100010388, symSize: 0x0 }
+  - { offsetInCU: 0x1FE, offset: 0x4F47, size: 0x8, addend: 0x0, symName: _xSchedulerEnd, symObjAddr: 0x3D70, symBinAddr: 0x100010390, symSize: 0x0 }
   - { offsetInCU: 0x213, offset: 0x4F5C, size: 0x8, addend: 0x0, symName: _hThreadKeyOnce, symObjAddr: 0xB28, symBinAddr: 0x100010010, symSize: 0x0 }
-  - { offsetInCU: 0x228, offset: 0x4F71, size: 0x8, addend: 0x0, symName: _xThreadKey, symObjAddr: 0x3D88, symBinAddr: 0x1000103B8, symSize: 0x0 }
-  - { offsetInCU: 0x25A, offset: 0x4FA3, size: 0x8, addend: 0x0, symName: _prvStartTimeNs, symObjAddr: 0x3D90, symBinAddr: 0x1000103C0, symSize: 0x0 }
+  - { offsetInCU: 0x228, offset: 0x4F71, size: 0x8, addend: 0x0, symName: _xThreadKey, symObjAddr: 0x3D98, symBinAddr: 0x1000103B8, symSize: 0x0 }
+  - { offsetInCU: 0x25A, offset: 0x4FA3, size: 0x8, addend: 0x0, symName: _prvStartTimeNs, symObjAddr: 0x3DA0, symBinAddr: 0x1000103C0, symSize: 0x0 }
   - { offsetInCU: 0x33E, offset: 0x5087, size: 0x8, addend: 0x0, symName: _pxPortInitialiseStack, symObjAddr: 0x0, symBinAddr: 0x10000AD28, symSize: 0x134 }
   - { offsetInCU: 0x3E9, offset: 0x5132, size: 0x8, addend: 0x0, symName: _prvSetupSignalsAndSchedulerPolicy, symObjAddr: 0x134, symBinAddr: 0x10000AE5C, symSize: 0xF8 }
   - { offsetInCU: 0x43C, offset: 0x5185, size: 0x8, addend: 0x0, symName: _vPortEnterCritical, symObjAddr: 0x22C, symBinAddr: 0x10000AF54, symSize: 0x40 }
